--- a/css/style.css
+++ b/css/style.css
@@ -4,3 +4,50 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+/* COMMON */
+.flex{
+    display: flex;
+    flex-wrap: wrap;
+}
+
+
+.container{
+    width: 100%;
+    height: 100vh;
+}
+
+.toolbar{
+    background-color: #222222;
+    height: 100px;
+}
+
+.content{
+    padding: 20px;
+}
+
+.col{
+    gap: 10px;
+}
+
+/* MAIN */
+
+.user{
+    position: relative;
+
+    /* DEBUG */
+    border: 1px solid black;
+    width: 300px;
+    height: 200px;
+}
+
+.user-name{
+    position: absolute;
+    bottom: 20px;
+    left: 0;
+
+    /* DEBUG */
+    border: 1px solid green;
+    width: 80px;
+    height: 30px;
+}
