--- a/css/style.css
+++ b/css/style.css
@@ -14,37 +14,39 @@
 
 .container{
     width: 100%;
+    height: 100vh;
+    background-color: black;
 }
 
 
 .content{
-    padding: 20px;
+    padding: 60px;
+    margin: 0 auto;
 }
 
+
 .col{
+    justify-content: center;
     gap: 10px;
+}
+
+img{
+    max-width: 100%;
 }
 
 /* MAIN */
 
-.user{
+.user-photo{
     position: relative;
-
-    /* DEBUG */
-    border: 1px solid black;
-    width: 300px;
-    height: 200px;
 }
 
 .user-name{
     position: absolute;
     bottom: 20px;
     left: 0;
+    background-color: #4a4a4a;
+    color: white;
 
-    /* DEBUG */
-    border: 1px solid green;
-    width: 80px;
-    height: 30px;
 }
 
 /* TOOLBAR */
