--- a/css/style.css
+++ b/css/style.css
@@ -6,12 +6,31 @@
 }
 
 /* COMMON */
+html{
+    font-family: sans-serif;
+    font-size: 100%;
+}
+
 .flex{
     display: flex;
     flex-wrap: wrap;
 }
 
+img{
+    max-width: 100%;
+}
 
+i{
+    font-size: 1.5em;
+}
+
+/* HEADER */
+header{
+    height: 30px;
+    background-color: black;
+}
+
+/* MAIN */
 .container{
     width: 100%;
     height: 100vh;
@@ -21,8 +40,9 @@
 
 
 .content{
-    padding: 60px;
     margin: 0 auto;
+    height: calc(100% - 100px - 30px);
+    overflow: auto;
 }
 
 
@@ -30,12 +50,6 @@
     justify-content: center;
     gap: 10px;
 }
-
-img{
-    max-width: 100%;
-}
-
-/* MAIN */
 
 .user-photo{
     position: relative;
