--- a/css/style.css
+++ b/css/style.css
@@ -59,7 +59,7 @@ header{
     position: absolute;
     bottom: 20px;
     left: 0;
-    background-color: #4a4a4a;
+    background-color: #4a4a4a3d;
     color: white;
 
 }
